# BundesHost-Deployment

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  fly.toml  models.dvc  prefect.yaml  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/: raw.dvc
data/processed/: .gitignore  tourism_long.csv  tourism_long.csv.dvc
data/raw/: tourism_monthly_aggregated.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: fct_tourism_monthly.sql  schema.yml
dbt/models/staging/: sources.yml  stg_tourism.sql
docker/: api.Dockerfile  prefect.Dockerfile  streamlit.Dockerfile
modeling/: config.py  data_pipeline.py  evaluate.py  feature_engineering.py  predict.py  train.py
models/: best_models.json
monitoring/grafana/dashboards/: api_dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
notebooks/: 00_data_understanding.ipynb  02_time_series_modeling.ipynb  03_forecast_evaluation_and_retraining.ipynb
scripts/: destatis_smoke_test.py  init_db.sql  mlflow_smoke_test.py  promote_all_to_production.py
src/bundeshost/: __init__.py  config.py  data_pipeline.py  evaluate.py  feature_engineering.py  predict.py  registry.py  train.py
src/bundeshost/api/: main.py  schemas.py
src/bundeshost/data/: destatis_client.py  ingest.py  pipeline.py
src/bundeshost/modeling/: evaluate.py  feature_engineering.py  predict.py  train.py
src/bundeshost/monitoring/: drift.py
src/bundeshost/pipelines/: deploy.py  ingest_flow.py  quarterly_retrain.py  tasks.py
tests/: _destatis_api_fixtures.py  conftest.py  test_api.py  test_destatis_client.py  test_drift.py  test_feature_engineering.py  test_model_quality.py  test_pipelines.py  test_predict.py  test_registry.py
(+1 files in other folders)
