[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "bundeshost"
version = "0.1.0"
description = "Tourism forecasting and hosting capacity analysis for German states"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nazila Fazeli" },
]
dependencies = [
    # Runtime dependencies will be referenced from requirements.txt later
]


[tool.hatch.build.targets.wheel]
packages = ["src/bundeshost"]


# ==================================================
# Tooling configuration
# ==================================================

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (unused imports, undefined names, etc.)
    "I",    # isort (import sorting)
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade (modernize syntax)
]
ignore = [
    "E501",  # line too long (black handles this)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # allow unused imports in __init__.py
"notebooks/*" = ["E402", "F401"]  # notebooks have different conventions


[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring external services (Postgres, MLflow registry, local CSV file). Skipped on CI.",
]
